# ticker

./: .gitignore  Cargo.toml
.sqlx/: query-fba13a3d63c0e6a2b64133b21a7e8947f4f8c2a26ae02c88239f9e5fb616b724.json
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  server.rs  ui.rs
crates/server/src/services/: price.rs
crates/server/templates/: index.html
crates/ticker-core/: Cargo.toml
crates/ticker-core/examples/: demo.rs
crates/ticker-core/queries/: insert_price_tick.sql  schema.sql  select_all_price_ticks.sql  select_price_ticks.sql  select_price_ticks_after.sql
crates/ticker-core/src/: adapters.rs  error.rs  ingestion.rs  lib.rs  storage.rs  types.rs
crates/ticker-core/src/adapters/: binance.rs  bybit.rs  coinbase.rs
migrations/: 20250829114238_create_price_ticks.sql
